src/kernel/parser/rubygrammar.output
   0  $accept : program $end

   1  $$1 :

   2  program : $$1 compstmt

   3  bodystmt : compstmt opt_rescue opt_else opt_ensure

   4  compstmt : stmts opt_terms

   5  stmts : none
   6        | stmt
   7        | stmts terms stmt
   8        | error stmt

   9  $$2 :

  10  stmt : kALIAS fitem $$2 fitem
  11       | kALIAS tGVAR tGVAR
  12       | kALIAS tGVAR tBACK_REF
  13       | kALIAS tGVAR tNTH_REF
  14       | kUNDEF undef_list
  15       | stmt kIF_MOD expr_value
  16       | stmt kUNLESS_MOD expr_value
  17       | stmt kWHILE_MOD expr_value
  18       | stmt kUNTIL_MOD expr_value
  19       | stmt kRESCUE_MOD stmt

  20  $$3 :

  21  stmt : klBEGIN $$3 '{' compstmt '}'
  22       | klEND '{' compstmt '}'
  23       | lhs '=' command_call
  24       | mlhs '=' command_call
  25       | var_lhs tOP_ASGN command_call
  26       | primary_value ary_ref tOP_ASGN command_call
  27       | primary_value '.' tIDENTIFIER tOP_ASGN command_call
  28       | primary_value '.' tCONSTANT tOP_ASGN command_call
  29       | primary_value tCOLON2 tIDENTIFIER tOP_ASGN command_call
  30       | backref tOP_ASGN command_call
  31       | lhs '=' mrhs
  32       | mlhs '=' arg_value
  33       | mlhs '=' mrhs
  34       | expr

  35  expr : command_call
  36       | expr kAND expr
  37       | expr kOR expr
  38       | kNOT expr
  39       | '!' command_call
  40       | arg

  41  expr_value : expr

  42  command_call : command
  43               | block_command
  44               | kRETURN call_args
  45               | kBREAK call_args
  46               | kNEXT call_args

  47  block_command : block_call
  48                | block_call '.' operation2 command_args
  49                | block_call tCOLON2 operation2 command_args

  50  $$4 :

  51  $$5 :

  52  cmd_brace_block : tLBRACE_ARG $$4 opt_block_var $$5 compstmt '}'

  53  command : operation command_args
  54          | operation command_args cmd_brace_block
  55          | primary_value '.' operation2 command_args
  56          | primary_value '.' operation2 command_args cmd_brace_block
  57          | primary_value tCOLON2 operation2 command_args
  58          | primary_value tCOLON2 operation2 command_args cmd_brace_block
  59          | kSUPER command_args
  60          | kYIELD command_args

  61  mlhs : mlhs_basic
  62       | tLPAREN mlhs_entry ')'

  63  mlhs_entry : mlhs_basic
  64             | tLPAREN mlhs_entry ')'

  65  mlhs_basic : mlhs_head
  66             | mlhs_head mlhs_item
  67             | mlhs_head tSTAR mlhs_node
  68             | mlhs_head tSTAR
  69             | tSTAR mlhs_node
  70             | tSTAR

  71  mlhs_item : mlhs_node
  72            | tLPAREN mlhs_entry ')'

  73  mlhs_head : mlhs_item ','
  74            | mlhs_head mlhs_item ','

  75  ary_ref : '[' aref_args ']'

  76  mlhs_node : variable
  77            | primary_value ary_ref
  78            | primary_value '.' tIDENTIFIER
  79            | primary_value tCOLON2 tIDENTIFIER
  80            | primary_value '.' tCONSTANT
  81            | primary_value tCOLON2 tCONSTANT
  82            | tCOLON3 tCONSTANT
  83            | backref

  84  lhs : variable
  85      | primary_value ary_ref
  86      | primary_value '.' tIDENTIFIER
  87      | primary_value tCOLON2 tIDENTIFIER
  88      | primary_value '.' tCONSTANT
  89      | primary_value tCOLON2 tCONSTANT
  90      | tCOLON3 tCONSTANT
  91      | backref

  92  cname : tIDENTIFIER
  93        | tCONSTANT

  94  cpath : tCOLON3 cname
  95        | cname
  96        | primary_value tCOLON2 cname

  97  fname : tIDENTIFIER
  98        | tCONSTANT
  99        | tFID
 100        | op
 101        | reswords

 102  fitem : fname
 103        | symbol
 104        | dsym

 105  undef_list : fitem

 106  $$6 :

 107  undef_list : undef_list ',' $$6 fitem

 108  op : '|'
 109     | '^'
 110     | '&'
 111     | tCMP
 112     | tEQ
 113     | tEQQ
 114     | tMATCH
 115     | '>'
 116     | tGEQ
 117     | '<'
 118     | tLEQ
 119     | tLSHFT
 120     | tRSHFT
 121     | '+'
 122     | '-'
 123     | '*'
 124     | tSTAR
 125     | '/'
 126     | '%'
 127     | tPOW
 128     | '~'
 129     | tUPLUS
 130     | tUMINUS
 131     | tAREF
 132     | tASET
 133     | '`'

 134  reswords : k__LINE__
 135           | k__FILE__
 136           | klBEGIN
 137           | klEND
 138           | kALIAS
 139           | kAND
 140           | kBEGIN
 141           | kBREAK
 142           | kCASE
 143           | kCLASS
 144           | kDEF
 145           | kDEFINED
 146           | kDO
 147           | kELSE
 148           | kELSIF
 149           | kEND
 150           | kENSURE
 151           | kFALSE
 152           | kFOR
 153           | kIN
 154           | kMODULE
 155           | kNEXT
 156           | kNIL
 157           | kNOT
 158           | kOR
 159           | kREDO
 160           | kRESCUE
 161           | kRETRY
 162           | kRETURN
 163           | kSELF
 164           | kSUPER
 165           | kTHEN
 166           | kTRUE
 167           | kUNDEF
 168           | kWHEN
 169           | kYIELD
 170           | kIF_MOD
 171           | kUNLESS_MOD
 172           | kWHILE_MOD
 173           | kUNTIL_MOD
 174           | kRESCUE_MOD

 175  arg : lhs '=' arg
 176      | lhs '=' arg kRESCUE_MOD arg
 177      | var_lhs tOP_ASGN arg
 178      | primary_value ary_ref tOP_ASGN arg
 179      | primary_value '.' tIDENTIFIER tOP_ASGN arg
 180      | primary_value '.' tCONSTANT tOP_ASGN arg
 181      | primary_value tCOLON2 tIDENTIFIER tOP_ASGN arg
 182      | primary_value tCOLON2 tCONSTANT tOP_ASGN arg
 183      | tCOLON3 tCONSTANT tOP_ASGN arg
 184      | backref tOP_ASGN arg
 185      | arg tDOT2 arg
 186      | arg tDOT3 arg
 187      | arg '+' arg
 188      | arg '-' arg
 189      | arg '*' arg
 190      | arg '/' arg
 191      | arg '%' arg
 192      | arg tPOW arg
 193      | tUMINUS_NUM tINTEGER tPOW arg
 194      | tUMINUS_NUM tFLOAT tPOW arg
 195      | tUPLUS arg
 196      | tUMINUS arg
 197      | arg '|' arg
 198      | arg '^' arg
 199      | arg '&' arg
 200      | arg tCMP arg
 201      | arg '>' arg
 202      | arg tGEQ arg
 203      | arg '<' arg
 204      | arg tLEQ arg
 205      | arg tEQ arg
 206      | arg tEQQ arg
 207      | arg tNEQ arg
 208      | arg tMATCH arg
 209      | arg tNMATCH arg
 210      | '!' arg
 211      | '~' arg
 212      | arg tLSHFT arg
 213      | arg tRSHFT arg
 214      | arg tANDOP arg
 215      | arg tOROP arg

 216  $$7 :

 217  arg : kDEFINED opt_nl $$7 arg

 218  $$8 :

 219  arg : arg '?' $$8 arg ':' arg
 220      | primary

 221  arg_value : arg

 222  aref_args : none
 223            | command opt_nl
 224            | args trailer
 225            | args ',' tSTAR arg opt_nl
 226            | assocs trailer
 227            | tSTAR arg opt_nl

 228  paren_args : '(' none ')'
 229             | '(' call_args opt_nl ')'
 230             | '(' block_call opt_nl ')'
 231             | '(' args ',' block_call opt_nl ')'

 232  opt_paren_args : none
 233                 | paren_args

 234  call_args : command
 235            | args opt_block_arg
 236            | args ',' tSTAR arg_value opt_block_arg
 237            | assocs opt_block_arg
 238            | assocs ',' tSTAR arg_value opt_block_arg
 239            | args ',' assocs opt_block_arg
 240            | args ',' assocs ',' tSTAR arg opt_block_arg
 241            | tSTAR arg_value opt_block_arg
 242            | block_arg

 243  call_args2 : arg_value ',' args opt_block_arg
 244             | arg_value ',' block_arg
 245             | arg_value ',' tSTAR arg_value opt_block_arg
 246             | arg_value ',' args ',' tSTAR arg_value opt_block_arg
 247             | assocs opt_block_arg
 248             | assocs ',' tSTAR arg_value opt_block_arg
 249             | arg_value ',' assocs opt_block_arg
 250             | arg_value ',' args ',' assocs opt_block_arg
 251             | arg_value ',' assocs ',' tSTAR arg_value opt_block_arg
 252             | arg_value ',' args ',' assocs ',' tSTAR arg_value opt_block_arg
 253             | tSTAR arg_value opt_block_arg
 254             | block_arg

 255  $$9 :

 256  command_args : $$9 open_args

 257  open_args : call_args

 258  $$10 :

 259  open_args : tLPAREN_ARG $$10 ')'

 260  $$11 :

 261  open_args : tLPAREN_ARG call_args2 $$11 ')'

 262  block_arg : tAMPER arg_value

 263  opt_block_arg : ',' block_arg
 264                | none

 265  args : arg_value
 266       | args ',' arg_value

 267  mrhs : args ',' arg_value
 268       | args ',' tSTAR arg_value
 269       | tSTAR arg_value

 270  primary : literal
 271          | strings
 272          | xstring
 273          | regexp
 274          | words
 275          | qwords
 276          | var_ref
 277          | backref
 278          | tFID

 279  $$12 :

 280  primary : kBEGIN $$12 bodystmt kEND

 281  $$13 :

 282  primary : tLPAREN_ARG expr $$13 opt_nl ')'
 283          | tLPAREN compstmt ')'
 284          | primary_value tCOLON2 tCONSTANT
 285          | tCOLON3 tCONSTANT
 286          | primary_value ary_ref
 287          | tLBRACK aref_args ']'
 288          | tLBRACE assoc_list '}'
 289          | kRETURN
 290          | kYIELD '(' call_args ')'
 291          | kYIELD '(' ')'
 292          | kYIELD

 293  $$14 :

 294  primary : kDEFINED opt_nl '(' $$14 expr ')'
 295          | operation brace_block
 296          | method_call
 297          | method_call brace_block

 298  $$15 :

 299  primary : kIF $$15 expr_value then compstmt if_tail kEND

 300  $$16 :

 301  primary : kUNLESS $$16 expr_value then compstmt opt_else kEND

 302  $$17 :

 303  $$18 :

 304  primary : kWHILE $$17 expr_value do $$18 compstmt kEND

 305  $$19 :

 306  $$20 :

 307  primary : kUNTIL $$19 expr_value do $$20 compstmt kEND

 308  $$21 :

 309  primary : kCASE $$21 expr_value opt_terms case_body kEND

 310  $$22 :

 311  primary : kCASE opt_terms $$22 case_body kEND

 312  $$23 :

 313  primary : kCASE opt_terms $$23 kELSE compstmt kEND

 314  $$24 :

 315  $$25 :

 316  $$26 :

 317  primary : kFOR $$24 for_var kIN $$25 expr_value do $$26 compstmt kEND

 318  $$27 :

 319  primary : kCLASS cpath superclass $$27 bodystmt kEND

 320  $$28 :

 321  $$29 :

 322  primary : kCLASS tLSHFT expr $$28 term $$29 bodystmt kEND

 323  $$30 :

 324  primary : kMODULE cpath $$30 bodystmt kEND

 325  $$31 :

 326  primary : kDEF fname $$31 f_arglist bodystmt kEND

 327  $$32 :

 328  $$33 :

 329  primary : kDEF singleton dot_or_colon $$32 fname $$33 f_arglist bodystmt kEND
 330          | kBREAK
 331          | kNEXT
 332          | kREDO
 333          | kRETRY

 334  primary_value : primary

 335  then : term
 336       | ':'
 337       | kTHEN
 338       | term kTHEN

 339  do : term
 340     | ':'
 341     | kDO_COND

 342  if_tail : opt_else
 343          | kELSIF expr_value then compstmt if_tail

 344  opt_else : none
 345           | kELSE compstmt

 346  for_var : lhs
 347          | mlhs

 348  block_par : mlhs_item
 349            | block_par ',' mlhs_item

 350  blck_var : block_par
 351           | block_par ','
 352           | block_par ',' tAMPER lhs
 353           | block_par ',' tSTAR lhs ',' tAMPER lhs
 354           | block_par ',' tSTAR ',' tAMPER lhs
 355           | block_par ',' tSTAR lhs
 356           | block_par ',' tSTAR
 357           | tSTAR lhs ',' tAMPER lhs
 358           | tSTAR ',' tAMPER lhs
 359           | tSTAR lhs
 360           | tSTAR
 361           | tAMPER lhs

 362  opt_block_var : none
 363                | '|' '|'
 364                | tOROP
 365                | '|' blck_var '|'

 366  $$34 :

 367  $$35 :

 368  do_block : kDO_BLOCK $$34 opt_block_var $$35 compstmt kEND

 369  block_call : command do_block
 370             | block_call '.' operation2 opt_paren_args
 371             | block_call tCOLON2 operation2 opt_paren_args

 372  method_call : operation paren_args
 373              | primary_value '.' operation2 opt_paren_args
 374              | primary_value tCOLON2 operation2 paren_args
 375              | primary_value tCOLON2 operation3
 376              | primary_value '\\' operation2
 377              | tUBS operation2
 378              | kSUPER paren_args
 379              | kSUPER

 380  $$36 :

 381  $$37 :

 382  brace_block : '{' $$36 opt_block_var $$37 compstmt '}'

 383  $$38 :

 384  $$39 :

 385  brace_block : kDO $$38 opt_block_var $$39 compstmt kEND

 386  case_body : kWHEN when_args then compstmt cases

 387  when_args : args
 388            | args ',' tSTAR arg_value
 389            | tSTAR arg_value

 390  cases : opt_else
 391        | case_body

 392  opt_rescue : kRESCUE exc_list exc_var then compstmt opt_rescue
 393             | none

 394  exc_list : arg_value
 395           | mrhs
 396           | none

 397  exc_var : tASSOC lhs
 398          | none

 399  opt_ensure : kENSURE compstmt
 400             | none

 401  literal : numeric
 402          | symbol
 403          | dsym

 404  strings : string

 405  string : string1
 406         | string string1

 407  string1 : tSTRING_BEG string_contents tSTRING_END

 408  xstring : tXSTRING_BEG xstring_contents tSTRING_END

 409  regexp : tREGEXP_BEG xstring_contents tREGEXP_END

 410  words : tWORDS_BEG ' ' tSTRING_END
 411        | tWORDS_BEG word_list tSTRING_END

 412  word_list :
 413            | word_list word ' '

 414  word : string_content
 415       | word string_content

 416  qwords : tQWORDS_BEG ' ' tSTRING_END
 417         | tQWORDS_BEG qword_list tSTRING_END

 418  qword_list :
 419             | qword_list tSTRING_CONTENT ' '

 420  string_contents :
 421                  | string_contents string_content

 422  xstring_contents :
 423                   | xstring_contents string_content

 424  string_content : tSTRING_CONTENT

 425  $$40 :

 426  string_content : tSTRING_DVAR $$40 string_dvar

 427  $$41 :

 428  string_content : tSTRING_DBEG $$41 compstmt '}'

 429  string_dvar : tGVAR
 430              | tIVAR
 431              | tCVAR
 432              | backref

 433  symbol : tSYMBEG sym

 434  sym : fname
 435      | tIVAR
 436      | tGVAR
 437      | tCVAR

 438  dsym : tSYMBEG xstring_contents tSTRING_END

 439  numeric : tINTEGER
 440          | tFLOAT
 441          | tUMINUS_NUM tINTEGER
 442          | tUMINUS_NUM tFLOAT

 443  variable : tIDENTIFIER
 444           | tIVAR
 445           | tGVAR
 446           | tCONSTANT
 447           | tCVAR
 448           | kNIL
 449           | kSELF
 450           | kTRUE
 451           | kFALSE
 452           | k__FILE__
 453           | k__LINE__

 454  var_ref : variable

 455  var_lhs : variable

 456  backref : tNTH_REF
 457          | tBACK_REF

 458  superclass : term

 459  $$42 :

 460  superclass : '<' $$42 expr_value term
 461             | error term

 462  f_arglist : '(' f_args opt_nl ')'
 463            | f_args term

 464  f_args : f_arg ',' f_optarg ',' f_rest_arg opt_f_block_arg
 465         | f_arg ',' f_optarg opt_f_block_arg
 466         | f_arg ',' f_rest_arg opt_f_block_arg
 467         | f_arg opt_f_block_arg
 468         | f_optarg ',' f_rest_arg opt_f_block_arg
 469         | f_optarg opt_f_block_arg
 470         | f_rest_arg opt_f_block_arg
 471         | f_block_arg
 472         |

 473  f_norm_arg : tCONSTANT
 474             | tIVAR
 475             | tGVAR
 476             | tCVAR
 477             | tIDENTIFIER

 478  f_arg : f_norm_arg
 479        | f_arg ',' f_norm_arg

 480  f_opt : tIDENTIFIER '=' arg_value

 481  f_optarg : f_opt
 482           | f_optarg ',' f_opt

 483  restarg_mark : '*'
 484               | tSTAR

 485  f_rest_arg : restarg_mark tIDENTIFIER
 486             | restarg_mark

 487  blkarg_mark : '&'
 488              | tAMPER

 489  f_block_arg : blkarg_mark tIDENTIFIER

 490  opt_f_block_arg : ',' f_block_arg
 491                  | none

 492  singleton : var_ref

 493  $$43 :

 494  singleton : '(' $$43 expr opt_nl ')'

 495  assoc_list : none
 496             | assocs trailer
 497             | args trailer

 498  assocs : assoc
 499         | assocs ',' assoc

 500  assoc : arg_value tASSOC arg_value

 501  operation : tIDENTIFIER
 502            | tCONSTANT
 503            | tFID

 504  operation2 : tIDENTIFIER
 505             | tCONSTANT
 506             | tFID
 507             | op

 508  operation3 : tIDENTIFIER
 509             | tFID
 510             | op

 511  dot_or_colon : '.'
 512               | tCOLON2

 513  opt_terms :
 514            | terms

 515  opt_nl :
 516         | '\n'

 517  trailer :
 518          | '\n'
 519          | ','

 520  term : ';'
 521       | '\n'

 522  terms : term
 523        | terms ';'

 524  none :

state 0
	$accept : . program $end  (0)
	$$1 : .  (1)

	.  reduce 1

	program  goto 1
	$$1  goto 2


state 1
	$accept : program . $end  (0)

	$end  accept


state 2
	program : $$1 . compstmt  (2)
	none : .  (524)

	error  shift 3
	kCLASS  shift 4
	kMODULE  shift 5
	kDEF  shift 6
	kUNDEF  shift 7
	kBEGIN  shift 8
	kIF  shift 9
	kUNLESS  shift 10
	kCASE  shift 11
	kWHILE  shift 12
	kUNTIL  shift 13
	kFOR  shift 14
	kBREAK  shift 15
	kNEXT  shift 16
	kREDO  shift 17
	kRETRY  shift 18
	kRETURN  shift 19
	kYIELD  shift 20
	kSUPER  shift 21
	kSELF  shift 22
	kNIL  shift 23
	kTRUE  shift 24
	kFALSE  shift 25
	kNOT  shift 26
	kALIAS  shift 27
	kDEFINED  shift 28
	klBEGIN  shift 29
	klEND  shift 30
	k__LINE__  shift 31
	k__FILE__  shift 32
	tIDENTIFIER  shift 33
	tFID  shift 34
	tGVAR  shift 35
	tIVAR  shift 36
	tCONSTANT  shift 37
	tCVAR  shift 38
	tXSTRING_BEG  shift 39
	tINTEGER  shift 40
	tFLOAT  shift 41
	tNTH_REF  shift 42
	tBACK_REF  shift 43
	tUPLUS  shift 44
	tUMINUS  shift 45
	tUBS  shift 46
	tCOLON3  shift 47
	tLPAREN  shift 48
	tLPAREN_ARG  shift 49
	tLBRACK  shift 50
	tLBRACE  shift 51
	tSTAR  shift 52
	tSYMBEG  shift 53
	tSTRING_BEG  shift 54
	tREGEXP_BEG  shift 55
	tWORDS_BEG  shift 56
	tQWORDS_BEG  shift 57
	tUMINUS_NUM  shift 58
	'!'  shift 59
	'~'  shift 60
	$end  reduce 524
	'\n'  reduce 524
	';'  reduce 524

	strings  goto 61
	string  goto 62
	string1  goto 63
	xstring  goto 64
	regexp  goto 65
	words  goto 66
	qwords  goto 67
	literal  goto 68
	numeric  goto 69
	dsym  goto 70
	compstmt  goto 71
	stmts  goto 72
	stmt  goto 73
	expr  goto 74
	arg  goto 75
	primary  goto 76
	command  goto 77
	command_call  goto 78
	method_call  goto 79
	primary_value  goto 80
	var_ref  goto 81
	var_lhs  goto 82
	block_call  goto 83
	block_command  goto 84
	backref  goto 85
	lhs  goto 86
	none  goto 87
	mlhs  goto 88
	mlhs_head  goto 89
	mlhs_basic  goto 90
	mlhs_item  goto 91
	mlhs_node  goto 92
	variable  goto 93
	symbol  goto 94
	operation  goto 95


state 3
	stmts : error . stmt  (8)

	kCLASS  shift 4
	kMODULE  shift 5
	kDEF  shift 6
	kUNDEF  shift 7
	kBEGIN  shift 8
	kIF  shift 9
	kUNLESS  shift 10
	kCASE  shift 11
	kWHILE  shift 12
	kUNTIL  shift 13
	kFOR  shift 14
	kBREAK  shift 15
	kNEXT  shift 16
	kREDO  shift 17
	kRETRY  shift 18
	kRETURN  shift 19
	kYIELD  shift 20
	kSUPER  shift 21
	kSELF  shift 22
	kNIL  shift 23
	kTRUE  shift 24
	kFALSE  shift 25
	kNOT  shift 26
	kALIAS  shift 27
	kDEFINED  shift 28
	klBEGIN  shift 29
	klEND  shift 30
	k__LINE__  shift 31
	k__FILE__  shift 32
	tIDENTIFIER  shift 33
	tFID  shift 34
	tGVAR  shift 35
	tIVAR  shift 36
	tCONSTANT  shift 37
	tCVAR  shift 38
	tXSTRING_BEG  shift 39
	tINTEGER  shift 40
	tFLOAT  shift 41
	tNTH_REF  shift 42
	tBACK_REF  shift 43
	tUPLUS  shift 44
	tUMINUS  shift 45
	tUBS  shift 46
	tCOLON3  shift 47
	tLPAREN  shift 48
	tLPAREN_ARG  shift 49
	tLBRACK  shift 50
	tLBRACE  shift 51
	tSTAR  shift 52
	tSYMBEG  shift 53
	tSTRING_BEG  shift 54
	tREGEXP_BEG  shift 55
	tWORDS_BEG  shift 56
	tQWORDS_BEG  shift 57
	tUMINUS_NUM  shift 58
	'!'  shift 59
	'~'  shift 60
	.  error

	strings  goto 61
	string  goto 62
	string1  goto 63
	xstring  goto 64
	regexp  goto 65
	words  goto 66
	qwords  goto 67
	literal  goto 68
	numeric  goto 69
	dsym  goto 70
	stmt  goto 96
	expr  goto 74
	arg  goto 75
	primary  goto 76
	command  goto 77
	command_call  goto 78
	method_call  goto 79
	primary_value  goto 80
	var_ref  goto 81
	var_lhs  goto 82
	block_call  goto 83
	block_command  goto 84
	backref  goto 85
	lhs  goto 86
	mlhs  goto 88
	mlhs_head  goto 89
	mlhs_basic  goto 90
	mlhs_item  goto 91
	mlhs_node  goto 92
	variable  goto 93
	symbol  goto 94
	operation  goto 95


state 4
	primary : kCLASS . cpath superclass $$27 bodystmt kEND  (319)
	primary : kCLASS . tLSHFT expr $$28 term $$29 bodystmt kEND  (322)

	kCLASS  shift 4
	kMODULE  shift 5
	kDEF  shift 6
	kBEGIN  shift 8
	kIF  shift 9
	kUNLESS  shift 10
	kCASE  shift 11
	kWHILE  shift 12
	kUNTIL  shift 13
	kFOR  shift 14
	kBREAK  shift 97
	kNEXT  shift 98
	kREDO  shift 17
	kRETRY  shift 18
	kRETURN  shift 99
	kYIELD  shift 100
	kSUPER  shift 101
	kSELF  shift 22
	kNIL  shift 23
	kTRUE  shift 24
	kFALSE  shift 25
	kDEFINED  shift 102
	k__LINE__  shift 31
	k__FILE__  shift 32
	tIDENTIFIER  shift 103
	tFID  shift 34
	tGVAR  shift 35
	tIVAR  shift 36
	tCONSTANT  shift 104
	tCVAR  shift 38
	tXSTRING_BEG  shift 39
	tINTEGER  shift 40
	tFLOAT  shift 41
	tNTH_REF  shift 42
	tBACK_REF  shift 43
	tUBS  shift 46
	tLSHFT  shift 105
	tCOLON3  shift 106
	tLPAREN  shift 107
	tLPAREN_ARG  shift 49
	tLBRACK  shift 50
	tLBRACE  shift 51
	tSYMBEG  shift 53
	tSTRING_BEG  shift 54
	tREGEXP_BEG  shift 55
	tWORDS_BEG  shift 56
	tQWORDS_BEG  shift 57
	tUMINUS_NUM  shift 108
	.  error

	strings  goto 61
	string  goto 62
	string1  goto 63
	xstring  goto 64
	regexp  goto 65
	words  goto 66
	qwords  goto 67
	literal  goto 68
	numeric  goto 69
	dsym  goto 70
	cpath  goto 109
	primary  goto 110
	method_call  goto 79
	primary_value  goto 111
	var_ref  goto 81
	backref  goto 112
	variable  goto 113
	symbol  goto 94
	operation  goto 114
	cname  goto 115


state 5
	primary : kMODULE . cpath $$30 bodystmt kEND  (324)

	kCLASS  shift 4
	kMODULE  shift 5
	kDEF  shift 6
	kBEGIN  shift 8
	kIF  shift 9
	kUNLESS  shift 10
	kCASE  shift 11
	kWHILE  shift 12
	kUNTIL  shift 13
	kFOR  shift 14
	kBREAK  shift 97
	kNEXT  shift 98
	kREDO  shift 17
	kRETRY  shift 18
	kRETURN  shift 99
	kYIELD  shift 100
	kSUPER  shift 101
	kSELF  shift 22
	kNIL  shift 23
	kTRUE  shift 24
	kFALSE  shift 25
	kDEFINED  shift 102
	k__LINE__  shift 31
	k__FILE__  shift 32
	tIDENTIFIER  shift 103
	tFID  shift 34
	tGVAR  shift 35
	tIVAR  shift 36
	tCONSTANT  shift 104
	tCVAR  shift 38
	tXSTRING_BEG  shift 39
	tINTEGER  shift 40
	tFLOAT  shift 41
	tNTH_REF  shift 42
	tBACK_REF  shift 43
	tUBS  shift 46
	tCOLON3  shift 106
	tLPAREN  shift 107
	tLPAREN_ARG  shift 49
	tLBRACK  shift 50
	tLBRACE  shift 51
	tSYMBEG  shift 53
	tSTRING_BEG  shift 54
	tREGEXP_BEG  shift 55
	tWORDS_BEG  shift 56
	tQWORDS_BEG  shift 57
	tUMINUS_NUM  shift 108
	.  error

	strings  goto 61
	string  goto 62
	string1  goto 63
	xstring  goto 64
	regexp  goto 65
	words  goto 66
	qwords  goto 67
	literal  goto 68
	numeric  goto 69
	dsym  goto 70
	cpath  goto 116
	primary  goto 110
	method_call  goto 79
	primary_value  goto 111
	var_ref  goto 81
	backref  goto 112
	variable  goto 113
	symbol  goto 94
	operation  goto 114
	cname  goto 115


state 6
	primary : kDEF . fname $$31 f_arglist bodystmt kEND  (326)
	primary : kDEF . singleton dot_or_colon $$32 fname $$33 f_arglist bodystmt kEND  (329)

	kCLASS  shift 117
	kMODULE  shift 118
	kDEF  shift 119
	kUNDEF  shift 120
	kBEGIN  shift 121
	kRESCUE  shift 122
	kENSURE  shift 123
	kEND  shift 124
	kTHEN  shift 125
	kELSIF  shift 126
	kELSE  shift 127
	kCASE  shift 128
	kWHEN  shift 129
	kFOR  shift 130
	kBREAK  shift 131
	kNEXT  shift 132
	kREDO  shift 133
	kRETRY  shift 134
	kIN  shift 135
	kDO  shift 136
	kRETURN  shift 137
	kYIELD  shift 138
	kSUPER  shift 139
	kSELF  shift 140
	kNIL  shift 141
	kTRUE  shift 142
	kFALSE  shift 143
	kAND  shift 144
	kOR  shift 145
	kNOT  shift 146
	kIF_MOD  shift 147
	kUNLESS_MOD  shift 148
	kWHILE_MOD  shift 149
	kUNTIL_MOD  shift 150
	kRESCUE_MOD  shift 151
	kALIAS  shift 152
	kDEFINED  shift 153
	klBEGIN  shift 154
	klEND  shift 155
	k__LINE__  shift 156
	k__FILE__  shift 157
	tIDENTIFIER  shift 158
	tFID  shift 159
	tGVAR  shift 35
	tIVAR  shift 36
	tCONSTANT  shift 160
	tCVAR  shift 38
	tUPLUS  shift 161
	tUMINUS  shift 162
	tPOW  shift 163
	tCMP  shift 164
	tEQ  shift 165
	tEQQ  shift 166
	tGEQ  shift 167
	tLEQ  shift 168
	tMATCH  shift 169
	tAREF  shift 170
	tASET  shift 171
	tLSHFT  shift 172
	tRSHFT  shift 173
	tSTAR  shift 174
	'>'  shift 175
	'<'  shift 176
	'|'  shift 177
	'^'  shift 178
	'&'  shift 179
	'+'  shift 180
	'-'  shift 181
	'*'  shift 182
	'/'  shift 183
	'%'  shift 184
	'~'  shift 185
	'`'  shift 186
	'('  shift 187
	.  error

	singleton  goto 188
	var_ref  goto 189
	variable  goto 113
	fname  goto 190
	op  goto 191
	reswords  goto 192


state 7
	stmt : kUNDEF . undef_list  (14)
